@@ -1,3 +1,6 @@
+2013-03-08 Gregory L. Lee <lee218@llnl.gov>
+	* README : updated content
+
 2013-03-05 Gregory L. Lee <lee218@llnl.gov>
 	* : updated license information
 
